--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <h1>World Clock</h1>
     <footer>
       Coded by Kieu Anh Pham and is
-      <a href="#" target="_blank"> open-sourced on Github</a>
+      <a href="https://github.com/kieuanhphamm/world-clock" target="_blank">
+        open-sourced on Github</a
+      >
     </footer>
     <script src="src/index.js"></script>
   </body>
