--- a/index.html
+++ b/index.html
@@ -8,7 +8,29 @@
     <title>World Clock</title>
   </head>
   <body>
-    <h1>World Clock</h1>
+    <div class="container">
+      <h1>World Clock</h1>
+
+      <select>
+        <option value="">Select a city</option>
+        <option value="">London</option>
+        <option value="">Tokyo</option>
+        <option value="">Kuala Lumpur</option>
+        <option value="">New York</option>
+        <option value="">Paris</option>
+      </select>
+
+      <div class="city">
+        <h2>Sydney 🇦🇺</h2>
+        <div class="date">June 25th 2023</div>
+        <div class="time">1:18:20 PM</div>
+      </div>
+      <div class="city">
+        <h2>Hanoi 🇻🇳</h2>
+        <div class="date">June 25th 2023</div>
+        <div class="time">1:18:20 PM</div>
+      </div>
+    </div>
     <footer>
       Coded by Kieu Anh Pham and is
       <a href="https://github.com/kieuanhphamm/world-clock" target="_blank">
