--- a/index.html
+++ b/index.html
@@ -21,19 +21,27 @@
       </select>
 
       <div class="city">
-        <h2>Sydney 🇦🇺</h2>
-        <div class="date">June 25th 2023</div>
-        <div class="time">1:18:20 PM</div>
+        <div>
+          <h2>Sydney 🇦🇺</h2>
+          <div class="date">June 25th 2023</div>
+        </div>
+        <div class="time">1:18:20 <small>PM</small></div>
       </div>
       <div class="city">
-        <h2>Hanoi 🇻🇳</h2>
-        <div class="date">June 25th 2023</div>
-        <div class="time">1:18:20 PM</div>
+        <div>
+          <h2>Hanoi 🇻🇳</h2>
+          <div class="date">June 25th 2023</div>
+        </div>
+        <div class="time">1:18:20 <small>PM</small></div>
       </div>
     </div>
     <footer>
       Coded by Kieu Anh Pham and is
-      <a href="https://github.com/kieuanhphamm/world-clock" target="_blank">
+      <a
+        class="code-source"
+        href="https://github.com/kieuanhphamm/world-clock"
+        target="_blank"
+      >
         open-sourced on Github</a
       >
     </footer>
