Change default cities

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="src/style.css" rel="stylesheet" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.43/moment-timezone-with-data-1970-2030.min.js"></script>
     <title>World Clock</title>
   </head>
   <body>
@@ -13,26 +15,26 @@
 
       <select>
         <option value="">Select a city</option>
-        <option value="">London</option>
+        <option value="">Auckland</option>
         <option value="">Tokyo</option>
         <option value="">Kuala Lumpur</option>
         <option value="">New York</option>
         <option value="">Paris</option>
       </select>
 
-      <div class="city">
+      <div class="city" id="london">
         <div>
-          <h2>Sydney 🇦🇺</h2>
-          <div class="date">June 25th 2023</div>
+          <h2>London 🇬🇧</h2>
+          <div class="date"></div>
         </div>
-        <div class="time">1:18:20 <small>PM</small></div>
+        <div class="time"></div>
       </div>
-      <div class="city">
+      <div class="city" id="hochiminh-city">
         <div>
-          <h2>Hanoi 🇻🇳</h2>
-          <div class="date">June 25th 2023</div>
+          <h2>Ho Chi Minh City 🇻🇳</h2>
+          <div class="date"></div>
         </div>
-        <div class="time">1:18:20 <small>PM</small></div>
+        <div class="time"></div>
       </div>
     </div>
     <footer>
