Add functionality for select

--- a/index.html
+++ b/index.html
@@ -13,28 +13,30 @@
     <div class="container">
       <h1>World Clock</h1>
 
-      <select>
+      <select id="select-city">
         <option value="">Select a city</option>
-        <option value="">Auckland</option>
-        <option value="">Tokyo</option>
-        <option value="">Kuala Lumpur</option>
-        <option value="">New York</option>
-        <option value="">Paris</option>
+        <option value="Pacific/Auckland">Auckland</option>
+        <option value="Asia/Tokyo">Tokyo</option>
+        <option value="Asia/Kuala_Lumpur">Kuala Lumpur</option>
+        <option value="America/New_York">New York</option>
+        <option value="Europe/Paris">Paris</option>
       </select>
 
-      <div class="city" id="london">
-        <div>
-          <h2>London 🇬🇧</h2>
-          <div class="date"></div>
+      <div id="cities">
+        <div class="city" id="london">
+          <div>
+            <h2>London 🇬🇧</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
         </div>
-        <div class="time"></div>
-      </div>
-      <div class="city" id="hochiminh-city">
-        <div>
-          <h2>Ho Chi Minh City 🇻🇳</h2>
-          <div class="date"></div>
+        <div class="city" id="hochiminh-city">
+          <div>
+            <h2>Ho Chi Minh City 🇻🇳</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
         </div>
-        <div class="time"></div>
       </div>
     </div>
     <footer>
