--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
       <select id="select-city">
         <option value="">Select a city</option>
+        <option value="local">My current location</option>
         <option value="Pacific/Auckland">Auckland</option>
         <option value="Asia/Tokyo">Tokyo</option>
         <option value="Asia/Kuala_Lumpur">Kuala Lumpur</option>
