Add the third default city

--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
           </div>
           <div class="time"></div>
         </div>
+        <div class="city" id="hawaii">
+          <div>
+            <h2>Hawaii 🇺🇸</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
+        </div>
       </div>
     </div>
     <footer>
